--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Yuliia Gorgodze's portfolio. Skillset, projects, work experience."
+      content="Slava Volodin portfolio. Skillset, projects, work experience."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -33,7 +33,7 @@
     <title>Volodin Slava</title>
     <script
       id="react-dotenv"
-      src="https://yuliia-gorgodze/portfolio/env.js"
+      src="https://Slava-Volodin.github.io/portfolio/env.js"
     ></script>
   </head>
   <body>
