--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
     <title>Volodin Slava</title>
     <script
       id="react-dotenv"
-      src="https://Slava-Volodin.github.io/portfolio/env.js"
+      src="https://slava-volodin.github.io/portfolio/env.js"
     ></script>
   </head>
   <body>
